2003-10-24  Derek Price  <derek@ximbiot.com>

	* vers_ts.c (Version_TS): Move variable declaration inside the only
	block where it is used and remove uneeded reinitialization.

2003-10-24  Derek Price  <derek@ximbiot.com>

	* server.h: s/^extern// off of function declarations per HACKING.
	Reformat protos for readability.

2003-10-24  Derek Price  <derek@ximbiot.com>

	* vers_ts.c (Version_TS): Reformat declaration and expand header
	comment.

2003-10-24  Derek Price  <derek@ximbiot.com>

	* update.c (merge_file): Remove code that hasn't been used since CVS
	used an external RCS (1.9.something).

2003-10-23  Mark D. Baushke  <mdb@cvshome.org>

	* update.c (join_file): Do the -jrev1 -jrev2 merge even when
	the file is already at rev2.
	* sanity.sh (join6): New testcase for above.
	(Suggested by Paul Edwards, from somewhere in Australia.)
	(import): Fix collateral damage.
	
2003-10-23  Derek Price  <derek@ximbiot.com>

	* sanity.sh (fail): Refer the user to the `TESTS' and `check.log' files
	on failure.

2003-10-22  Derek Price  <derek@ximbiot.com>

	* recurse.c (start_recursion): Reformat function declaration and
	expand comments.
	(Original patch from Terrence Enger <tenger@iSeries-guru.com>.)

2003-10-22  Derek Price  <derek@ximbiot.com>

	* Makefile.am (cvs_LDADD): Add $(LIBINTL) for gettext.
	* Makefile.in: Regenerated.

2003-10-19  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (admin-31): Fix more typos.

2003-10-18  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (admin): Fix a typo.

	* admin.c (admin_fileproc): Restore the ':' character in the
	-mtag:message admin argument even if the tag does not exist so
	that other files with the tag will be found. Also, be more
	paranoid that a symbolic tag actually points to a version that
	exists.
	(Reported by Rodolfo Schulz de Lima <rodolfo@rodsoft.org>.)
	* sanity.sh (admin): Test these changes.
	
2003-10-17  Mark D. Baushke  <mdb@cvshome.org>

	* admin.c (admin_fileproc): Force tag match on admin